test/classes/initializers/parentCall/inCobeginOn.comm-none.lm-numa.good
inCobeginOn.chpl:4: In initializer:
inCobeginOn.chpl:8: error: use of this.complete() call in an on block
